src/objects/loginTracking__c.object
<CustomObject>
    <fields>
        <fullName>loginDateTime__c</fullName>
        <label>loginDateTime</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loginName__c</fullName>
        <label>loginName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pageName__c</fullName>
        <label>pageName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>loginTracking</label>
    <nameField>
        <label>loginTracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>loginTrackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>